# PaddleMaskDetector

./: CMakeLists.txt  README.md  export_model.py  infer.py  linux_build.sh  main.cc  main.cpp  mask_detector.cc  mask_detector.h
docs/: linux_build.md  windows_build.md
include/: mask_detector.hpp  paddle_cv_inference.h
include/object_classification/: object_classification.h
include/utils/: config_parser.h  utils.h
scripts/: build.sh
src/: mask_detector.cc
